# FaceSocial01

./: .env.example  .gitignore  Dockerfile  README.md  README_MULTI_FRAMEWORK.md  api_spec.json  api_test_complete.py  api_test_log.txt  bulk_face_test.py  check_api_endpoints.py  check_models_status.py  complete_multi_model_test.py  comprehensive_api_test.py  config_optimization.py  create_model_dirs.bat  crop_faces_clean.py  docker-compose.yml  docker-run.bat  docker-run.sh  dynamic_model_test_report.json  face_detection.html  face_detection_test.py  face_recognition_accuracy_test.py  face_recognition_test.py  face_registration.html  face_registration_comparison_test.py  face_registration_fixed.html  final_comprehensive_report.py  framework_fix_results.json  framework_models_test_report.json  framework_registration_debug_report.json  framework_test_results.json  install.bat  install_multi_framework.bat  install_multi_framework.sh  mypy.ini  py.typed  quick-setup.bat  quick-setup.sh  quick_api_test.py  (+33 more)
documentation/: ชุดคำสั่ง-age-gender-analysis.md  ชุดคำสั่ง-anti-spoofing.md  ชุดคำสั่ง-backend-python-services.md  ชุดคำสั่ง-database-management.md  ชุดคำสั่ง-docker-deployment.md  ชุดคำสั่ง-face-analysis-enhanced.md  ชุดคำสั่ง-face-detection-recognition.md  ชุดคำสั่ง-frontend-typescript-react.md  ชุดคำสั่ง-system-infrastructure.md  ชุดคำสั่งระบบแพลตฟอร์มสื่อสังคมออนไลน์และการจัดการรูปภาพบุคคลด้วยการจดจำใบหน้า.md
projec-final-fronend/: Dockerfile  FINAL_SUMMARY.md  SYSTEM_READY.md  check-database.js  debug.sh  docker-compose.yml  next.config.js  package-lock.json  package.json  test_system.py  tsconfig.json
projec-final-fronend/database/init/: 00_init.sh  01_schema.sql  02_social_features.sql  03_sample_data.sql
projec-final-fronend/database/migrations/: 001_add_face_image_data.sql  002_add_social_features.sql
projec-final-fronend/database/sample_data/: social_features_data.sql  social_features_sample.sql
projec-final-fronend/documentation/frontend-redesign/: README.md  face_api_test_summary.md
projec-final-fronend/nginx/: nginx.conf
projec-final-fronend/prisma/: schema.prisma  seed.ts
projec-final-fronend/prisma/migrations/20250620111715_initial/: migration.sql
projec-final-fronend/public/: face-login-improved.html  face-login-test.html  face-scan-debug-test.html  test-anti-spoofing.js
projec-final-fronend/scripts/: seed-sample-data.js
projec-final-fronend/src/app/: globals.css  layout.tsx  page.tsx
projec-final-fronend/src/app/admin/: page.tsx
projec-final-fronend/src/app/ai-testing/: page.tsx
projec-final-fronend/src/app/api/clear-data/: route.ts
projec-final-fronend/src/app/api/clear-face-server/: route.ts
projec-final-fronend/src/app/api/friends/: route.ts
projec-final-fronend/src/app/api/health/: route.ts
projec-final-fronend/src/app/api/list-saved-faces/: route.ts
projec-final-fronend/src/app/api/notifications/: route.ts
projec-final-fronend/src/app/api/posts/: route.ts
projec-final-fronend/src/app/api/profile/: route.ts
projec-final-fronend/src/app/api/save-face-image/: route.ts
projec-final-fronend/src/app/api/socket/: route.ts
projec-final-fronend/src/app/api/test-face-api/: route.ts
projec-final-fronend/src/app/chat/: page-new.tsx  page.tsx  page_NEW.tsx  page_clean.tsx  page_final.tsx
projec-final-fronend/src/app/dashboard/: page-new.tsx  page.tsx
projec-final-fronend/src/app/feed/: page-new.tsx  page.tsx  page_NEW.tsx
projec-final-fronend/src/app/friends/: page.tsx
projec-final-fronend/src/app/login/: page.tsx
projec-final-fronend/src/app/notifications/: page.tsx
projec-final-fronend/src/app/profile/: page-new.tsx  page.tsx
projec-final-fronend/src/app/register/: page.tsx
projec-final-fronend/src/components/: AntdConfigProvider.tsx  ConsoleWarningSuppress.tsx
projec-final-fronend/src/components/ai/: AIStatusIndicator.tsx  AIStatusModal.tsx  FaceAPIStatus.tsx
projec-final-fronend/src/components/auth/: FaceLoginModal.tsx  FaceRegistration.tsx
projec-final-fronend/src/components/features/: CCTVComponent.tsx  ModelSpecificApiStatus.tsx  RealTimeAntiSpoofing.tsx  RealTimeCCTV.tsx  RealTimeFaceDetectionSimple.tsx
projec-final-fronend/src/components/layout/: AppLayout.tsx  AppLayout_NEW.tsx  AppLayout_OLD.tsx
projec-final-fronend/src/components/social/: FaceTagModal.tsx  FriendSearchModal.tsx  NotificationDropdown.tsx  PostCreateModal.tsx
projec-final-fronend/src/hooks/: useAIServiceStatus.ts  useAvailabilityCheck.ts  useFaceRecognition.ts  useRealtimeChat.ts  useSocket.ts
projec-final-fronend/src/pages/api/: socket.ts
projec-final-fronend/src/stores/: ai.ts  auth.ts
projec-final-fronend/src/styles/: custom.css  globals.css  theme.ts
projec-final-fronend/src/types/: api.ts  database.ts  index.ts
projec-final-fronend/src/utils/: suppressWarnings.ts
projec-final-fronend/utils/: faceRecognitionService.js
scripts/: docker_model_setup.sh  docker_startup.sh  download_models.py
src/: __init__.py  main.py  py.typed  pyproject.toml
src/ai_services/: __init__.py
src/ai_services/age_gender/: __init__.py  age_gender_service.py  models.py
src/ai_services/anti_spoofing/: __init__.py  anti_spoofing_service.py
src/ai_services/common/: __init__.py  base_service.py  stats.py  utils.py  vram_manager.py
src/ai_services/face_analysis/: __init__.py  enhanced_registration_service.py  face_analysis_service.py  models.py  models_fixed.py
src/ai_services/face_detection/: __init__.py  enhanced_quality_assessment.py  face_detection_service.py  landmark_detector.py  multi_model_service.py  optimized_face_detection_service.py  simple_yolov11m_service.py  utils.py  yolo_models.py
src/ai_services/face_recognition/: __init__.py  face_recognition_service.py  models.py
src/api/: __init__.py  age_gender_endpoints.py  anti_spoofing.py  complete_endpoints.py  face_analysis.py  face_detection.py  face_enhanced_validation.py  face_recognition.py  face_recognition_enhanced.py
src/api_routes/: fast_face_detection.py  optimized_face_detection.py
src/core/: config.py  log_config.py
test_images/: README.md
(+53 files in other folders)
