[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition-system"
version = "2.0.0"
description = "Professional Face Detection, Recognition & Analysis System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    # Add your other dependencies here
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "src.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N"]
ignore = ["E402"]  # Allow imports after code (for sys.path modification)

[tool.ruff.lint.per-file-ignores]
"src/main.py" = ["E402"]

[tool.pylance]
include = ["src"]
extraPaths = ["."]